# haskell-fast-reals

./: .project  ApproximateField.hs  Dyadic.hs  DyadicMPFR.hs  DyadicRounded.hs  Interval.hs  LICENSE  README.md  README.txt  Reals.hs  Searchable.hs  Space.hs  Staged.hs  TestReals.hs  example.ghci  haskell-fast-reals.cabal
notes/: monads.lhs
src/Data/Approximate/: ApproximateField.hs  Interval.hs
src/Data/Approximate/Floating/: Dyadic.hs  HMPFR.hs  MPFR.hs
src/Data/Reals/: Estimates.hs  Lipschitz.hs  Reals.hs  Space.hs  Staged.hs
testsuite/benchmarks/: bench-float.hs  bench-reals.hs  timings-mpfr  timings-mpfr.c
testsuite/tests/: CheckReals.hs  HTFTestReals.hs
testsuite/tests/Data/Reals/: TestReals.hs
